fixing some css

--- a/generators/easy_layout/templates/stylesheets/sass/application.sass
+++ b/generators/easy_layout/templates/stylesheets/sass/application.sass
@@ -159,9 +159,9 @@
     input[type=password],
     input[type=text],
     textarea
-      border-color: !form_input_light_border
-      border-top-color: !form_input_dark_border
-      border-left-color: !form_input_dark_border
+      border-color = !form_input_light_border
+      border-top-color = !form_input_dark_border
+      border-left-color = !form_input_dark_border
     .comment
       color = !comment_color
     .required
