fixing css, layout, and some required teaks for rails

--- a/generators/easy_layout/templates/layouts/application.haml
+++ b/generators/easy_layout/templates/layouts/application.haml
@@ -2,7 +2,7 @@
 !!! Strict
 %html{ :xmlns => "http://www.w3.org/1999/xhtml" }
   %head
-    %title= "<%=  %> [#{yield :title}]"
+    %title= "New Rails App - #{yield :title}"
     = stylesheet_link_tag :all, :media => :all
     = javascript_include_tag :all, :cache => true
     = yield :head
@@ -10,11 +10,10 @@
     #main
       #head
         .wrapper
-          #toolbar=yield :toolbar
-          #title=yield :title
-          #navigation=easy_navigation :default
+          #toolbar
+            = render 'sessions/session'
+          #logo
+          #navigation= easy_navigation :default
       #content.wrapper
-        #sidebar=yield :sidebar
-        #page
-          - shadowbox "page_content" do
-            = yield
+        - feedback
+        = yield
