--- a/generators/easy_layout/templates/stylesheets/sass/application.sass
+++ b/generators/easy_layout/templates/stylesheets/sass/application.sass
@@ -1,346 +1,2 @@
-// *****************************************************************************
-// Layout elements color's
-// *****************************************************************************
-!body_background_color = #EFEFEF
-!body_background_image = url(\/images\/body_bg.png)
-!default_border_color = #E0E0E0
-!head_color = #707070
-!link_color = #21A1D5
-!page_background_color = #FFF
-!text_color = #696969
-!toolbar_color = #FFF
-
-// Sidebar
-!sidebar_width = 350px
-!sidebar_content_width = 370px
-!sidebar_section_background_color = #EFEFEF
-!sidebar_section_border_color = #DDD
-!sidebar_section_border_width = 3px
-
-// *****************************************************************************
-// Forms
-// *****************************************************************************
-
-// Flash messages
-!flash_background_color = #FFFFCC
-!flash_error_color = #F00
-!flash_notice_color = #000
-
-// Input[type=text|password] and textarea colors with shadow effect
-!form_input_dark_border_color = #8C8C8C
-!form_input_light_border_color = #BEBEBE
-
-// The color for * (asterisk) indicating required fields
-!required_field_symbol_color = #F00
-
-// Comment's color
-!comment_color = #9E9E9E
-
-// Errors
-!form_error_color = #F00
-
-// *****************************************************************************
-// Shadowbox colors
-// *****************************************************************************
-!shadow1_background_color = #C9C9C9
-!shadow2_background_color = #B0B0B0
-!shadow3_background_color = #A9A9A9
-
-// *****************************************************************************
-// Fonts
-// *****************************************************************************
-!font_family = "helvetica, arial, sans-serif"
-!font_size = 16px
-
-// *****************************************************************************
-// *****************************************************************************
-@media all
-
-  // ***************************************************************************
-  // Tags
-  // ***************************************************************************
-  body *
-    font:
-      family = !font_family
-
-  a
-    font-weight: normal
-
-  h1
-    font-size: 1.7em
-    padding: 10px 20px
-    margin: -20px
-    margin-bottom: 20px
-    .comment
-      font:
-        size: 0.7em
-        weight: normal
-
-  h2
-    padding-bottom: 5px
-    font-size: 1.4em
-
-  h3
-    font-size: 1.2em
-
-  hr
-    border: 0
-    margin-top: 20px
-
-  h1, h2, hr
-    border-bottom:
-      style: solid
-      width: 1px
-
-  ul
-    margin: 0
-    padding: 0
-    li
-      list-style: none
-
-  table
-    border-spacing: 0
-    tr
-      td
-        margin: 0
-        padding: 0
-        vertical-align: top
-
-  // ***************************************************************************
-  // Special classes
-  // ***************************************************************************
-  #flash .container
-    .notice, .error
-      padding: 10px 20px
-      margin-bottom: 10px
-      p
-        margin: 0
-
-  .wrapper
-    margin: 0 20px
-
-  #sidebar
-    .sidebar_section
-      margin-bottom: 10px
-      h1
-        font-size: 1em
-        line-height: 1.2em
-        margin: 0 -10px
-        margin-bottom: 5px
-        padding: 0 10px
-        padding-bottom: 5px
-        div
-          float: right
-          font-size: 0.9em
-      .comment, td.label
-        font-size: 0.8em
-      td
-        padding-bottom: 10px
-        line-height: 1.4em
-      td.label
-        font-weight: bold
-        padding-right: 10px
-        padding-top: 3px
-        width: 60px
-
-  // ***************************************************************************
-  // Forms
-  // ***************************************************************************
-  form
-    .comment
-      font-size: 0.9em
-    .form_error
-      font-size: 0.9em
-    input[type=password],
-    input[type=text],
-    textarea
-      width: 350px
-    input[type=password],
-    input[type=text],
-    select,
-    textarea
-      font-size: 1em
-      margin: 5px 5px 5px 0
-      padding: 1px
-      line-height: 1em
-
-    option
-      font-size: 1em
-      line-height: 1em
-    a
-      font-size: 0.9em
-
-  // ***************************************************************************
-  // Head
-  // ***************************************************************************
-  #head
-    height: 140px
-    width: 100%
-
-    #toolbar
-      font-size: 0.9em
-      line-height: 1.4em
-      height: 25px
-
-    #logo
-      height: 80px
-
-    #navigation
-      clear: both
-      height: 33px
-      margin: 0
-      padding: 0
-      ul .navigation
-        display: block
-        float: left
-        margin: 0 20px
-
-  // ***************************************************************************
-  // Content
-  // ***************************************************************************
-  #content
-    padding-top: 20px
-    #page.sidebar
-      margin-right = !sidebar_content_width
-    #page
-      .container
-        margin: 0
-        h1
-          position: relative
-          div
-            float: right
-            font:
-              size: 0.6em
-              weight: normal
-            line-height: 2em
-
-  // ***************************************************************************
-  // Sidebar
-  // ***************************************************************************
-  #sidebar
-    float: right
-    width = !sidebar_width
-    padding: 0
-    margin: 0
-    .sidebar_section
-      padding: 10px
-
-  // ***************************************************************************
-  // Shadowbox
-  // ***************************************************************************
-  .shadow
-    margin:
-      left: 3px
-      top: 3px
-
-// *****************************************************************************
-// *****************************************************************************
-@media screen
-
-  // ***************************************************************************
-  // Tags
-  // ***************************************************************************
-  body
-    background:
-      color = !body_background_color
-      image = !body_background_image
-      repeat: repeat-x
-    color = !text_color
-    font-size = !font_size
-    margin: 0
-    min-width: 980px
-
-  a
-    color = !link_color
-
-  hr
-    border-color: transparent
-
-  h1, h2, hr
-    border-bottom-color = !default_border_color
-
-  // ***************************************************************************
-  // Special classes
-  // ***************************************************************************
-  #flash .container
-    background-color = !flash_background_color
-    .notice p
-      color = !flash_notice_color
-    .error p
-      color = !flash_error_color
-
-  // ***************************************************************************
-  // Forms (screen)
-  // ***************************************************************************
-  form
-    .comment
-      color = !comment_color
-    .required
-      color = !required_field_symbol_color
-    .form_error
-      color = !form_error_color
-
-  // ***************************************************************************
-  // Head
-  // ***************************************************************************
-  #head
-    #toolbar, #toolbar a
-      color = !toolbar_color
-
-  // ***************************************************************************
-  // Content (screen)
-  // ***************************************************************************
-  #page
-    .container
-      background-color = !page_background_color
-      margin: -10px 0 10px
-      padding: 20px
-      h1
-        color = !head_color
-
-  // ***************************************************************************
-  // Sidebar (screen)
-  // ***************************************************************************
-  #sidebar
-    .sidebar_section
-      background-color = !sidebar_section_background_color
-      border:
-        color = !sidebar_section_border_color
-        style: solid
-        width = !sidebar_section_border_width
-
-  // ***************************************************************************
-  // Shadowbox (screen)
-  // ***************************************************************************
-  .shadow
-    .shadow1, .shadow2, .shadow3, .container
-      left: -1px
-      position: relative
-      top: -1px
-    .shadow1
-      background-color = !shadow1_background_color
-      .shadow2
-        background-color = !shadow2_background_color
-        .shadow3
-          background-color = !shadow3_background_color
-
-// *****************************************************************************
-// *****************************************************************************
-@media print
-
-  body, html
-    font-size: 10pt
-    margin: 0
-    padding: 0
-
-  #head
-    display: none
-
-  #page .container
-    h1 div
-      display: none
-    margin: 0
-    padding: 0
-
-  .wrapper
-    margin: 0
+// Import constants from current template
+@import template/init.sass
